<resources>
    <string name="app_name">BrausteuerungApp</string>
    <string name="app_dev">mikroSikaru.de</string>
    <string name="action_settings">Settings</string>
    <string name="bt_str_connect">Verbinden</string>
    <string name="bt_str_disconnect">Trennen</string>
    <string name="bt_str_setting">Einstellung</string>
    <string name="bt_str_rast">Rasten</string>
    <string name="bt_str_start">Brauen</string>
    <string name="title_activity_connect_menu">ConnectMenu</string>
    <string name="bt_str_connect_back">Zurück</string>
    <string name="title_activity_setup_menu">SetupMenu</string>
    <string name="title_activity_setup">Einstellungp</string>
    <string name="btn_str_setup_back">Zurück</string>
    <string name="btn_str_main_manual">Anleitung</string>
    <string name="btn_str_main_end">Ende</string>
    <string name="btn_str_connect_scan">suchen</string>
    <string name="menu_str_name">menu</string>
    <string name="bt_not_enabled_leaving">Bluetooth nicht eingeschaltet.</string>
    <string name="title_paired_devices">Verbundene Geräte</string>
    <string name="title_other_devices">anderer verfügbare Geräte</string>
    <string name="button_scan">Gerätesuche</string>
    <string name="none_paired">Keine Geräte verbunden</string>
    <string name="scanning">suche nach Geräten ...</string>
    <string name="select_device">wöhle ein Gerät zum Verbinden</string>
    <string name="none_found">Kein Gerät gefunden</string>
    <string name="not_connected">mit keinem Gerät verbunden</string>
    <string name="setting_str_stz">NTC T0 [°C]</string>
    <string name="setting_str_ntct0">NTC T0 [°C]</string>
    <string name="setup_str_spi">use PID</string>
    <string name="setting_str_skm">Temp Kalibrier M</string>
    <string name="setting_str_srz">NTC R0 [Ohm]</string>
    <string name="setting_str_skt">Temp Kalibrier T [°C]</string>
    <string name="setting_str_sto">NTC T1 [°C]</string>
    <string name="setting_str_sro">NTC R1 [Ohm]</string>
    <string name="setting_str_svw">NTC VorR [Ohm]</string>
    <string name="setting_str_sps">PID Wnd Size [ms]</string>
    <string name="setting_str_spt">PID Sample Time [ms]</string>
    <string name="setting_str_spd">PID Delta T [d°C]</string>
    <string name="setting_str_sts">Tune Step</string>
    <string name="setting_str_stn">Tune Noise</string>
    <string name="setting_str_slb">Tune LookBack</string>
    <string name="setting_str_sst">Switch Type</string>
    <string name="setting_str_ssb">Switch Bits</string>
    <string name="setting_str_ssr">Switch Repeats</string>
    <string name="setting_str_ssp">Switch Periodic [ms]</string>
    <string name="setting_str_ssa">Switch Address</string>
    <string name="setting_str_ssu">Switch Unit</string>
    <string name="setting_str_sbl">Battery low [V]</string>
    <string name="setting_str_spw">Password</string>
    <string name="btn_str_setup_store">Ok</string>
    <string name="title_activity_recipes">Brau Rezept Editor</string>
    <string name="title_recipe_name">Rast</string>
    <string name="btn_str_setup_load">Laden</string>
    <string name="btn_str_setup_save">Speichern</string>
    <string name="btn_str_setup_new">Neu</string>
    <string name="btn_str_setup_ok">Ok</string>
    <string name="rast_str_checkBox_onOff">Einschalten</string>
    <string name="rast_str_checkBox_halt">Anhalten</string>
    <string name="rast_str_checkBox_call">Brauerruf</string>
    <string name="rast_str_textView_name">Rast Name</string>
    <string name="rast_str_textView_sollTemp">Soll Temp [°C]</string>
    <string name="rast_str_textView_time">Dauer [min]</string>
    <string name="rast_str_textView_minTmp">min. dTemp [d°C]</string>
    <string name="rast_str_textView_maxTmp">max. dTemp [d°C]</string>
    <string name="rast_str_textView_kp">PID KP</string>
    <string name="rast_str_textView_ki">PID KI</string>
    <string name="rast_str_textView_kd">PID KD</string>
    <string name="rast_str_textView_gradient_cost">Gradient Faktor</string>
    <string name="rast_str_textView_onTimePuls">Puls An Dauer [s]</string>
    <string name="rast_str_textView_offTimePuls">Puls Aus Dauer [s]</string>
    <string name="rast_str_textView_maxGradient">Max.Steigung [°C/min]</string>
    <string name="rast_str_textView_defaultEinmauschen">Einmaischen</string>
    <string name="rast_str_textView_defaultKochen">Kochen</string>
    <string name="rast_str_textView_WrongXsudVersion">Nicht unterstuetzte XSud Datei Version</string>
    <string name="file_str_open">Öffnen</string>
    <string name="file_str_save">Speichern</string>
    <string name="file_str_new_folder">Neuer Ordner</string>
    <string name="file_str_new_folder_name">Neuer Ordner Name</string>
    <string name="file_str_ok">OK</string>
    <string name="file_str_cancel">Abbrechen</string>
    <string name="file_str_failed_create">Failed to create</string>
    <string name="file_str_file_ending">bml</string>
    <string name="file_str_file_ending_import1">xsud</string>
    <string name="file_str_file_ending_import2">xml</string>
    <string name="file_str_file_save">Speichere Datei </string>
    <string name="file_str_file_save_err">Speichere Datei Fehler</string>
    <string name="file_str_file_load">Lade Datei </string>
    <string name="file_str_file_load_err">Lade Datei Fehler </string>
    <string name="file_str_file_not_transfered">Kein Rezept übertragen</string>
    <string name="file_str_file_defaut_name">sendFile</string>
    <string name="file_str_file_extCardDir">/storage/extSdCard</string>
    <string name="file_str_file_csv_sep">;</string>
    <string name="state_str_Initialzed">OK</string>
    <string name="state_str_store_recipe_ok">Rast geladen Nr:</string>
    <string name="state_str_store_error">Übertragungsfehler</string>
    <string name="title_activity_run">Brau Fortschritt</string>
    <string name="btn_run_str_start">Starten</string>
    <string name="btn_run_str_stop">Stop</string>
    <string name="btn_run_str_weiter">Weiter</string>
    <string name="run_str_time">Restzeit [m:s]:</string>
    <string name="txt_run_str_Gradient">Gradient [°C/min]:</string>
    <string name="btn_run_str_mute">Ton aus</string>
    <string name="btn_run_str_reset">Reset</string>
    <string name="txt_run_str_IstTmp">Ist Temp. [°C]:</string>
    <string name="txt_run_str_SollTmp">Soll Temp. [°C]:</string>
    <string name="txt_run_str_Status">Status :</string>
    <string name="txt_run_str_Battery">Batterie [%]:</string>
    <string name="txt_run_str_Infos">Info :</string>
    <string name="txt_run_str_BatLow">Battarie niedrig</string>
    <string name="txt_run_str_Call">Brauruf</string>
    <string name="txt_run_str_Wait">Warte</string>
    <string name="txt_run_str_HeaterState">Heizung :</string>
    <string name="txt_run_str_HeaterState_on">An</string>
    <string name="txt_run_str_HeaterState_off">Aus</string>
    <string name="run_str_back">Zurück</string>
    <string name="run_str_logfilename">BrausteuerungLog</string>
    <string name="state_str_BrewingIsRunning">Brauen läuft</string>
    <string name="state_str_BrewingIsNotRunning">Brauen gestoppt</string>
    <string name="state_str_Bluetooth_Connected">Mit Steuerung verbunden</string>
    <string name="state_str_Bluetooth_NotConnected">Von Steurung getrennt</string>
</resources>
