<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.mikrosikaru.brausteuerungapp.MainMenu"
    tools:showIn="@layout/activity_main_menu">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_str_connect"
        android:id="@+id/bt_id_connect"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_str_setting"
        android:id="@+id/bt_id_setting"
        android:layout_below="@+id/bt_id_connect"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/bt_id_connect"
        android:layout_alignEnd="@+id/bt_id_connect" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_str_rast"
        android:id="@+id/bt_id_rast"
        android:layout_below="@+id/bt_id_setting"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/bt_id_setting"
        android:layout_alignEnd="@+id/bt_id_setting" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_str_start"
        android:id="@+id/bt_id_start"
        android:layout_below="@+id/bt_id_rast"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_str_main_manual"
        android:id="@+id/btn_id_main_manual"
        android:layout_above="@+id/btn_id_main_end"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_str_main_end"
        android:id="@+id/btn_id_main_end"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mainmenu_id_textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/bt_id_start"
        android:layout_alignRight="@+id/bt_id_start"
        android:layout_alignEnd="@+id/bt_id_start" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mainmenu_id_tv_VersionApp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/mainmenu_id_textView"
        android:layout_alignRight="@+id/mainmenu_id_textView"
        android:layout_alignEnd="@+id/mainmenu_id_textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_main_ipaddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/mainmenu_id_tv_VersionApp"
        android:layout_alignRight="@+id/mainmenu_id_textView"
        android:layout_alignEnd="@+id/mainmenu_id_textView" />



</RelativeLayout>
